Update 404.html, profile.html files

--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@
           <br>
     </div>
     <center style="margin-top: 40vh;"></center>
-    <div class="main" style="color:red;font-size:50px;text-align:center;valign:middle"><!--fixedsys-->
+    <div class="main" style="color:crimson;font-size:50px;text-align:center;valign:middle"><!--fixedsys-->
       PAGE NOT FOUND
     </div>
     <!--<?php else: ?>
