--- a/profile.html
+++ b/profile.html
@@ -119,10 +119,10 @@
           </tr>
           <tr>
             <td>
-                <button onclick="switchThemeNormal()">Normal</button>
+                <button onclick="switchThemeNormal()" class="update">Normal</button>
             </td>
             <td>
-                <button onclick="switchTheme()">Dark</button>
+                <button onclick="switchTheme()" class="update">Dark</button>
             </td>
             <td>
               <?php include('errors.php') ?>
