--- a/profile.html
+++ b/profile.html
@@ -117,12 +117,13 @@
               </form>
             </td>
           </tr>
+          <center style="margin-top: 10vh;"></center>
           <tr>
             <td>
-                <button onclick="switchThemeNormal()" class="update">Normal</button>
+                <button onclick="switchThemeNormal()" class="update" style="border:1px solid #999999; background-color:#999999;">Normal</button>
             </td>
             <td>
-                <button onclick="switchTheme()" class="update">Dark</button>
+                <button onclick="switchTheme()" class="update" style="border:1px solid #5E616A; background-color:#5E616A;">Dark</button>
             </td>
             <td>
               <?php include('errors.php') ?>
