--- a/profile.html
+++ b/profile.html
@@ -72,7 +72,7 @@
         <table width="50%" style="table-layout: fixed;">
           <tr>
             <td style="width:22%" align="center">
-              <table>
+              <table style="border-spacing: 0px;">
                 <tr>
                   <td>
                     <!--<?php
@@ -116,9 +116,9 @@
                 <button type="submit" class="update" name="update">Update</button>
                 <!--<?php /*echo $_SESSION['name']*/ ?>-->
               </form>
+              <center style="margin-top: 10vh;"></center>
             </td>
           </tr>
-          <center style="margin-top: 10vh;"></center>
           <tr>
             <td>
                 <button onclick="switchThemeNormal()" class="update" style="border:1px solid #999999; background-color:#999999;">Normal</button>
