--- a/profile.html
+++ b/profile.html
@@ -71,7 +71,7 @@
       <div class="main">
         <table width="50%" style="table-layout: fixed;">
           <tr>
-            <td style="width:22%" align="center">
+            <td style="width:22%" align="center" valign="top">
               <table style="border-spacing: 0px;">
                 <tr>
                   <td>
