--- a/profile.html
+++ b/profile.html
@@ -120,6 +120,11 @@
             </td>
           </tr>
           <tr>
+            <td colspan="2">
+              Change theme
+            </td>
+          </tr>
+          <tr>
             <td>
                 <button onclick="switchThemeNormal()" class="update" style="border:1px solid #999999; background-color:#999999;">Normal</button>
             </td>
