--- a/profile.html
+++ b/profile.html
@@ -120,7 +120,7 @@
             </td>
           </tr>
           <tr>
-            <td colspan="2">
+            <td colspan="2" style="text-align:center">
               Change theme
             </td>
           </tr>
