--- a/profile.html
+++ b/profile.html
@@ -90,7 +90,7 @@
                   <td>
                     <form action="profile.html" method="post" enctype="multipart/form-data">
                       <input type="file" name="file" class="chooseFile" />
-                      <input type="submit" name="pic" value="Upload" class="update" />
+                      <input type="submit" name="pic" value="Upload" class="update" align="center" />
                     </form>
                   </td>
                 </tr>
@@ -126,10 +126,10 @@
           </tr>
           <tr>
             <td>
-                <button onclick="switchThemeNormal()" class="update" style="border:1px solid #999999; background-color:#999999;">Normal</button>
+                <button onclick="switchThemeNormal()" class="update" style="border:1px solid #999999; background-color:#999999;" align="center">Normal</button>
             </td>
             <td>
-                <button onclick="switchTheme()" class="update" style="border:1px solid #5E616A; background-color:#5E616A;">Dark</button>
+                <button onclick="switchTheme()" class="update" style="border:1px solid #5E616A; background-color:#5E616A;" align="center">Dark</button>
             </td>
             <td>
               <?php include('errors.php') ?>
