--- a/profile.html
+++ b/profile.html
@@ -87,10 +87,10 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>
+                  <td style="text-align:center">
                     <form action="profile.html" method="post" enctype="multipart/form-data">
                       <input type="file" name="file" class="chooseFile" />
-                      <input type="submit" name="pic" value="Upload" class="update" align="center" />
+                      <input type="submit" name="pic" value="Upload" class="update" />
                     </form>
                   </td>
                 </tr>
@@ -125,11 +125,11 @@
             </td>
           </tr>
           <tr>
-            <td>
-                <button onclick="switchThemeNormal()" class="update" style="border:1px solid #999999; background-color:#999999;" align="center">Normal</button>
+            <td style="text-align:center">
+                <button onclick="switchThemeNormal()" class="update" style="border:1px solid #999999; background-color:#999999;">Normal</button>
             </td>
-            <td>
-                <button onclick="switchTheme()" class="update" style="border:1px solid #5E616A; background-color:#5E616A;" align="center">Dark</button>
+            <td style="text-align:center">
+                <button onclick="switchTheme()" class="update" style="border:1px solid #5E616A; background-color:#5E616A;">Dark</button>
             </td>
             <td>
               <?php include('errors.php') ?>
