--- a/profile.html
+++ b/profile.html
@@ -89,7 +89,7 @@
                 <tr>
                   <td style="text-align:center">
                     <form action="profile.html" method="post" enctype="multipart/form-data">
-                      <input type="file" name="file" class="chooseFile" />
+                      <input type="file" name="file" class="chooseFile" style="width: 100%; font-size:10px" />
                       <input type="submit" name="pic" value="Upload" class="update" />
                     </form>
                   </td>
