--- a/profile.html
+++ b/profile.html
@@ -74,7 +74,7 @@
             <td style="width:22%" align="center" valign="top">
               <table style="border-spacing: 0px;">
                 <tr>
-                  <td>
+                  <td align="center">
                     <!--<?php
                     include("config.php");
                     $email = $_SESSION['email'];
@@ -83,7 +83,7 @@
                     $result=mysqli_fetch_array($sth);
                     echo '<img src="data:image/jpeg;base64,'.base64_encode( $result['profile_picture'] ).'" width="11%" height="11%" class="profilepic" align = "center"/>';
                     ?>-->
-                    <img src="media/profile.png" width="11%" height="11%" class="profilepic" align = "center"/>
+                    <img src="media/profile.png" width="11%" height="11%" class="profilepic" />
                   </td>
                 </tr>
                 <tr>
