--- a/tasks.html
+++ b/tasks.html
@@ -51,8 +51,16 @@
           </div>
           <div class="heading">
             <h1>
-              tasks
+              Project Name
             </h1>
+            <h2 style="color: #48516e">
+                Due Date: 5/10/2019
+            </h2>
+            <h3 style="color: #48516e; font-style: italic;">
+                Lorem ipsum dlsfjkjdfsdjnfkjdsnfjds nfjsdnfkjsndafkjdsnfkjdnsfk fweagwaggweagwa kdsjnfjkdsnf 
+                jkdsnfkjdsnfjkndsf dshfkjsdna kjdsfjkdnsfkjdsnf gaewgwagwagwagewagewakdjsbfjkdsnfjkndsfjk jhdbshjsvhj jdsnvjkdnsdskjnvdskljfnv kjbdsvhbdfv
+            </h3>
+            
           </div>
           <br>
     </div>
