--- a/profile.html
+++ b/profile.html
@@ -103,9 +103,9 @@
                 Change name
                 <br>
                 <script>
-                  document.getElementById('changeName').placeholder=localStorage.getItem('name');
-                  document.getElementById('changeEmail').placeholder=localStorage.getItem('email');
-                  document.getElementById('changePassword').placeholder=localStorage.getItem('password');
+                  document.getElementById("changeName").placeholder=localStorage.getItem("name");
+                  document.getElementById("changeEmail").placeholder=localStorage.getItem("email");
+                  document.getElementById("changePassword").placeholder=localStorage.getItem("password");
                 </script>
                 <input class="changeText" type="text" name="changeName" placeholder=""  id="changeName" required>
                 <!--<input class="changeText" type="text" name="changeName" placeholder="<?php echo $_SESSION['name'] ?>"  required>-->
