--- a/tasks.html
+++ b/tasks.html
@@ -5,13 +5,17 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link type = "text/css" rel="stylesheet" href="css/style.css" id="theme">
     <link type = "text/css" rel="stylesheet" href="css/tasks.css">
+
+    <script>
+    if  (localStorage.getItem("theme") == null) {
+        localStorage.setItem("theme", "css/style.css");
+    }
+    document.getElementById('theme').href = localStorage.getItem("theme");
+    </script>
+
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   </head>
-<<<<<<< HEAD
-  <body onload="loadTasks(), setTheme(), setButton()"><!--find free use image--> 
-=======
-  <body onload="loadTasks(), setTheme()"><!--find free use image--> 
->>>>>>> 8c66a299d7aebb38891a7e249f103495548ddae5
+  <body onload="loadProjects(), setTheme(), setButton(), loadTasks()">
     <!--<?php if  (isset($_SESSION['success'])): ?>-->
       <div class = "content">
           <div class="sidenav">
