--- a/tasks.html
+++ b/tasks.html
@@ -91,6 +91,8 @@
         <div class="main">
         <table id="taskTable">
         </table>
+        <ul id="projectTable">
+        </ul>
         <img id="taskButton" src="media/new_plus_blue.png" onclick="newTask()" />
     </div>
     <!-- OLD  
