--- a/home.html
+++ b/home.html
@@ -14,6 +14,12 @@
     document.getElementById('theme').href = localStorage.getItem("theme");
     </script>
 
+    <script>
+      function setCove() {
+        document.getElementById('cove').innerHTML=localStorage.getItem("name").toLowerCase()+"'s "+"cove"
+      }
+    </script>
+
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/tasks.js"></script>
@@ -57,7 +63,7 @@
             </div>
           </div>
           <div class="heading">
-            <h1>
+            <h1 id="cove" onload="setCove()">
               your cove
             </h1>
           </div>
