--- a/home.html
+++ b/home.html
@@ -63,8 +63,11 @@
             </div>
           </div>
           <div class="heading">
-            <h1 id="cove" onload="setCove()">
+            <h1 id="cove">
               your cove
+              <script>
+                setCove();
+              </script>
             </h1>
           </div>
           <br>
