--- a/404.html
+++ b/404.html
@@ -83,6 +83,9 @@
     <div class="main" style="color:crimson;font-size:50px;text-align:center;valign:middle"><!--fixedsys-->
       PAGE NOT FOUND
     </div>
+    <script>
+      setTimeout(function(){ window.history.back(); }, 3000);
+    </script>
     <!--<?php else: ?>
     <br>
     <a href="index.php">
