--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel='icon' href='media/favicon.png' type='image/x-icon'/ >
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link type = "text/css" rel="stylesheet" id="theme">
 
